# zistudy-api

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  condense_python.py  condensed_source_code.txt  dev_start_services.sh  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_study_card_scope_permissions.py  0003_drop_answer_unique_constraint.py
docs/: search_upgrade_plan.md
scripts/: ai_manual_check.py
src/zistudy_api/: app.py  celery_app.py  tools.py
src/zistudy_api/api/: __init__.py  dependencies.py
src/zistudy_api/api/routes/: __init__.py  ai.py  answers.py  auth.py  jobs.py  study_cards.py  study_sets.py  tags.py
src/zistudy_api/config/: settings.py
src/zistudy_api/core/: logging.py  security.py
src/zistudy_api/db/: migrations.py  models.py  session.py
src/zistudy_api/db/repositories/: answers.py  api_keys.py  jobs.py  refresh_tokens.py  study_cards.py  study_sets.py  tags.py  users.py
src/zistudy_api/domain/: enums.py
src/zistudy_api/domain/schemas/: ai.py  answers.py  auth.py  base.py  common.py  jobs.py  study_cards.py  study_sets.py  tags.py
src/zistudy_api/services/: answers.py  auth.py  job_processors.py  jobs.py  study_cards.py  study_sets.py  tags.py
src/zistudy_api/services/ai/: __init__.py  agents.py  clients.py  generation_service.py  pdf.py  pdf_strategies.py  prompts.py
tests/: conftest.py  test_ai_routes.py  test_answer_data_parsing.py  test_answers.py  test_app.py  test_auth.py  test_card_data_parsing.py  test_cards.py  test_dependencies.py  test_error_handling.py  test_migrations.py  test_route_errors.py  test_study_sets.py  test_tags.py  utils.py
tests/services/: test_ai_agent.py  test_ai_clients.py  test_ai_generation_mapping.py  test_ai_service.py  test_auth_service_unit.py  test_job_processors.py  test_pdf_ingestion.py  test_study_card_service.py  test_study_set_service.py  test_tag_service.py
